<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>model_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="doublehan0110@gmail.com">han</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- darren 12/10 - added this to set the mesh path which was causing the model to not visualize -->
    <gazebo_ros gazebo_model_path="${prefix}/.."/> 
  </export>
</package>
